k8s/ingress/01_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aquarium-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
spec:
  rules:
    - host: aquarium.esgi.ahi
      http:
        paths:
          - path: "/"
            backend:
              service:
                name: backendone-service
                port:
                  number: 8080
            pathType: Prefix
